# mayastor-api

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  README.md  build.rs  shell.nix
.github/workflows/: pr-rust-lint.yaml
nix/: sources.json
protobuf/: ha_cluster_agent.proto  mayastor.proto
protobuf/v1/: bdev.proto  common.proto  host.proto  mayastor.proto  nexus.proto  pool.proto  registration.proto  replica.proto  snapshot.proto  test.proto
src/: v0.rs  v1.rs
