[package]
name = "mayastor-api"
version = "1.0.0"
authors = ["Jeffry Molanus <jeffry.molanus@gmail.com>"]
edition = "2018"

[build-dependencies]
tonic-build = "0.8.4"
prost-build = "0.11.6"

[dependencies]
tonic = "0.8.3"
bytes = "1.0.1"
prost = "0.11.6"
prost-derive = "0.11.6"
prost-wkt-types = "0.4.0"
prost-types = "0.11.6"
serde = { version = "1.0.127", features = ["derive"] }
serde_derive = "1.0.127"
serde_json = "1.0.66"
