[package]
name = "mayastor-api"
version = "1.0.0"
authors = ["Jeffry Molanus <jeffry.molanus@gmail.com>"]
edition = "2021"

[build-dependencies]
tonic-build = "0.9.2"
prost-build = "0.11.9"

[dependencies]
tonic = "0.9.2"
bytes = "1.5.0"
prost = "0.11.9"
prost-derive = "0.11.9"
prost-wkt-types = "0.4.2"
prost-types = "0.11.9"
serde = { version = "1.0.188", features = ["derive"] }
serde_derive = "1.0.188"
serde_json = "1.0.107"
